--- a/package.json
+++ b/package.json
@@ -17,9 +17,27 @@
     "expo": "^30.0.1",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
-    "react-navigation": "^2.16.0"
+    "react-navigation": "^2.16.0",
+    "react-dom": "^16.5.2",
+    "react-scripts": "1.1.5",
+    "reactstrap": "^6.4.0",
+    "redux": "^4.0.0",
+    "redux-persist": "^5.10.0",
+    "redux-saga": "^0.16.0",
+    "redux-thunk": "^2.3.0",
+    "request-promise-native": "^1.0.5",
+    "styled-components": "^3.4.9"
   },
   "devDependencies": {
-    "jest-expo": "30.0.0"
+    "jest-expo": "30.0.0",
+    "babel-eslint": "^10.0.1",
+    "babel-plugin-styled-components": "^1.7.1",
+    "eslint": "^5.6.1",
+    "eslint-config-prettier": "^3.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-prettier": "^2.7.0",
+    "eslint-plugin-react": "^7.11.1",
+    "prettier": "^1.14.3",
+    "redux-devtools-extension": "^2.13.5"
   }
 }
